--- a/huong.html
+++ b/huong.html
@@ -12,7 +12,7 @@
   <div id="music-controls">
     <button id="toggleMusic" onclick="toggleMusic()">🔈</button>
     <select id="trackSelector" onchange="changeTrack(this.value)">
-      <option value="audio/VoYeu.mp3">Vợ Yêu</option>
+      <option value="1audio/VoYeu.mp3">Vợ Yêu</option>
       <option value="audio/HanhPhucMoiNgay.mp3">Hạnh Phúc Mỗi Ngày</option>
       <option value="audio/NgayDauTien.mp3">Ngày Đầu Tiên</option>
     </select>
