yeu Huong nhieu lam

--- a/huong.html
+++ b/huong.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Happy Birthday My Love</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="images/favicon-32x32.png" type="image/png">
 </head>
 
 <body>
@@ -27,8 +28,9 @@
   <div id="fireworkText">Chúc mừng sinh nhật Hường yêu 💖</div>
 
   <div class="container">
-    <h1>🎉 Happy Birthday, Em Yêu! 🎂</h1>
-    <p class="message">Hôm nay là một ngày thật đặc biệt, vì có một cô gái siêu dễ thương được sinh ra 💖</p>
+    <h1>🎉 Chờ Đón Sinh Nhật Hường Yêu 4/6/2025! 🎂</h1>
+    <div id="countdown" class="countdown"></div>
+    <p class="message">Còn vài ngày nữa là đến sinh nhật em yêu, cô gái siêu dễ thương của anh! 💖</p>
     <button id="startBtn" onclick="startJourney()">Nhấn vào đây nè!</button>
 
     <div id="journey" class="hidden">
